--- a/DbProject.csproj
+++ b/DbProject.csproj
@@ -50,12 +50,23 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Client\CLientWindow.xaml.cs">
+      <DependentUpon>CLientWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Client\DataGridDrawer.cs" />
+    <Compile Include="Client\HistogramDrawer.cs" />
+    <Compile Include="Client\IGraphicDrawer.cs" />
+    <Compile Include="Client\ITableDrawer.cs" />
     <Compile Include="Service\Article.cs" />
     <Compile Include="Service\Contact.cs" />
     <Compile Include="Service\Contract.cs" />
     <Compile Include="Service\Employee.cs" />
     <Compile Include="Service\IService.cs" />
     <Compile Include="Service\Service.cs" />
+    <Page Include="Client\CLientWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -87,9 +98,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Client" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
